syntax="proto3";
package services;
option go_package = ".;services";
import "google/api/annotations.proto";

import "Models.proto";

message OrderRequest {
    OrderMain order_main=1;
}

message OrderQuery {
    int32 order_id=1;
}

message OrderResponse {
    string status=1;
    string message=2;
}

service OrderService {
    rpc NewOrder(OrderRequest) returns (OrderResponse) {
        option (google.api.http) = {
            post: "/v1/order"
            body:"order_main"
        };
    }

    rpc GetOrder(OrderQuery) returns (OrderMain) {
        option (google.api.http) = {
            get: "/v1/order/{order_id}"
        };
    }
}
